--- a/package.json
+++ b/package.json
@@ -8,21 +8,28 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^34.0.0",
-    "react": "16.8.3",
-    "react-dom": "^16.8.6",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
-    "react-native-web": "^0.11.4",
+    "expo": "^39.0.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native-web": "~0.13.7",
     "react-navigation": "^3.11.1",
-    "react-native-gesture-handler": "^1.3.0",
-    "react-native-reanimated": "^1.1.0",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-reanimated": "~1.13.0",
     "react-navigation-header-buttons": "^3.0.1",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "react-native-maps": "0.27.1",
+    "expo-image-picker": "~9.1.0",
+    "react-native-screens": "~2.10.1",
+    "expo-permissions": "~9.3.0",
+    "expo-location": "~9.0.0",
+    "expo-file-system": "~9.2.0",
+    "expo-sqlite": "~8.4.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.1.1"
+    "babel-preset-expo": "^8.3.0"
   },
   "private": true
 }
